objects/TenantDailyEntitlementConsumption__dll.object
<CustomObject>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalOrganization__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_uniqueusageid__c</fullName>
        <label>KQ_uniqueusageid</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>aggregationtime__c</fullName>
        <label>Aggregation Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>carddefinitiondevelopername__c</fullName>
        <label>Card Definition Developer Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>coreorgid__c</fullName>
        <label>Core Org ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>drawdownday__c</fullName>
        <label>Drawdown Day</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>entitlementschedules__c</fullName>
        <label>Entitlement Schedules</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mgmtorgmultiplierid__c</fullName>
        <label>Management Org Multiplier ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>multiplier__c</fullName>
        <label>Multiplier</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>replayid__c</fullName>
        <label>Replay ID</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uniqueusageid__c</fullName>
        <label>Unique Usage ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unit__c</fullName>
        <label>Unit</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>unitsconsumed__c</fullName>
        <label>Units Consumed</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>usageaggregationtype__c</fullName>
        <label>Usage Aggregation Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usageconsumed__c</fullName>
        <label>Raw Usage</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>usagesubtype0__c</fullName>
        <label>Usage Subtype 0</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usagesubtype1__c</fullName>
        <label>Usage Subtype 1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usagesubtype2__c</fullName>
        <label>Usage Subtype 2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usagetypedevelopername__c</fullName>
        <label>Usage Type Developer Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utilizationdate__c</fullName>
        <label>Utilization Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>